test/e2e/manifest/testSecurityPolicy/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    image: netfvt-docker-local.packages.vcfd.broadcom.net:8080/stls-docker-dev-local/harbor-repo-registry/stls/busybox:latest
    command:
      - /bin/sh
      - "-c"
      - "while true;do echo hello, world!; sleep 1; done"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
