test/e2e/manifest/testSecurityPolicy/named-port-without-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      role: web
  template:
    metadata:
      labels:
        deployment: tcp-deployment
        role: web
    spec:
      hostname: web-deployment
      containers:
        - name: web
          image: "netfvt-docker-local.packages.vcfd.broadcom.net/humanux/http_https_echo:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: web-port
          resources:
            requests: # make sure that the pod cannot be running
              cpu: "10000m"
              memory: "10000Gi"
---
apiVersion: crd.nsx.vmware.com/v1alpha1
kind: SecurityPolicy
metadata:
  name: named-port-policy-without-pod
spec:
  priority: 10
  appliedTo:
    - podSelector:
        matchLabels:
          role: web
  rules:
    - direction: in
      action: allow
      ports:
        - protocol: TCP
          port: web-port
      name: named-port-rule
    - direction: in
      action: drop
      name: all_ingress_isolation
    - direction: out
      action: drop
      name: all_egress_isolation
