test/e2e/manifest/testSecurityPolicy/netcat-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nc-pod
  labels:
    role: client
spec:
  containers:
    - name: nc
      image: "netfvt-docker-local.packages.vcfd.broadcom.net:8080/wcp-docker-ci/gophernet/netcat:latest"
      command: ["nc", "-l", "-p", "1234"]
