test/e2e/manifest/testSecurityPolicy/ns-isolation-policy.yaml
apiVersion: crd.nsx.vmware.com/v1alpha1
kind: SecurityPolicy
metadata:
  name: isolate-policy-1
spec:
  priority: 20
  appliedTo:
    - podSelector: {}
    - vmSelector: {}
  rules:
    - direction: in
      action: drop
    - direction: out
      action: drop
