test/e2e/manifest/testSecurityPolicy/rule-in-policy-applied-to.yaml
#  test: kubectl exec -ti client -n client -- curl web ip
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    role: client
  namespace: client
spec:
  containers:
    - name: client
      image: "netfvt-docker-local.packages.vcfd.broadcom.net:8080/gateway-reg-docker-vr/amd64/photon:sha256__0df184f96396bbcdb3d088880fbbba3384589c466b14b6e496492a7347781fe0"
      command: [ "/bin/bash" ]
      args: [ "-c", "while true; do echo hello, world!; sleep 60; done" ]
  restartPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-deployment
  namespace: web
spec:
  replicas: 2
  selector:
    matchLabels:
      role: web
  template:
    metadata:
      labels:
        deployment: tcp-deployment
        role: web
    spec:
      hostname: web-deployment
      containers:
        - name: web
          image: "netfvt-docker-local.packages.vcfd.broadcom.net/humanux/http_https_echo:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: web-port
---
apiVersion: crd.nsx.vmware.com/v1alpha1
kind: SecurityPolicy
metadata:
  name: named-port-policy
  namespace: web
spec:
  priority: 10
  appliedTo:
    - podSelector:
        matchLabels:
          role: web
  rules:
    - direction: in
      action: allow
      ports:
        - protocol: TCP
          port: web-port
    - direction: in
      action: drop
    - direction: out
      action: drop
