test/e2e/manifest/testSecurityPolicy/rule-in-rule-applied-to-with-src.yaml
#  first: kubectl label ns client role=client
#  test: kubectl exec -ti client -n client -- curl web ip
#  test: curl web ip
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    role: client
spec:
  containers:
    - name: client
      image: "harbor-repo.vmware.com/dockerhub-proxy-cache/library/photon:3.0-20210507"
      command: [ "/bin/bash" ]
      args: [ "-c", "while true; do echo hello, world!; sleep 60; done" ]
  restartPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-deployment
  namespace: web
spec:
  replicas: 2
  selector:
    matchLabels:
      role: web
  template:
    metadata:
      labels:
        deployment: tcp-deployment
        role: web
    spec:
      hostname: web-deployment
      containers:
        - name: web
          image: "netfvt-docker-local.packages.vcfd.broadcom.net/humanux/http_https_echo:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: web-port
---
apiVersion: crd.nsx.vmware.com/v1alpha1
kind: SecurityPolicy
metadata:
  name: named-port-policy
spec:
  priority: 10
  appliedTo:
    - podSelector:
        matchLabels:
          role: web
  rules:
    - direction: in
      sources:
        - podSelector:
            matchLabels:
              role: client
        - namespaceSelector:
            matchLabels:
              role: client
      appliedTo:
        - podSelector:
            matchLabels:
              role: web
      action: allow
      ports:
        - protocol: TCP
          port: web-port
    - direction: in
      action: drop
    - direction: out
      action: drop
