test/e2e/manifest/testSecurityPolicy/vpc-from-field-ingress-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fr-srv
  labels:
    vpc-from-test: server
spec:
  restartPolicy: Never
  containers:
    - name: fr-srv
      image: "netfvt-docker-local.packages.vcfd.broadcom.net/humanux/http_https_echo:latest"
---
apiVersion: v1
kind: Pod
metadata:
  name: frclient-allow
  labels:
    vpc-from-test: client-allow
spec:
  restartPolicy: Never
  containers:
    - name: frclient-allow
      image: "netfvt-docker-local.packages.vcfd.broadcom.net/humanux/http_https_echo:latest"
---
apiVersion: v1
kind: Pod
metadata:
  name: frclient-deny
  labels:
    vpc-from-test: client-deny
spec:
  restartPolicy: Never
  containers:
    - name: frclient-deny
      image: "netfvt-docker-local.packages.vcfd.broadcom.net/humanux/http_https_echo:latest"
